# merlin_cv_mcp

./: .gitignore  README.md  pyproject.toml
opencv_mcp_server/: computer_vision.py  image_basics.py  image_processing.py  main.py  mcp_instance.py  profile_tool.py  security.py  utils.py  video_processing.py
opencv_mcp_server/utils/: __init__.py  config.py  contracts.py  cv_utils.py  path_utils.py
tests/: test_p2_security_regression.py
workspace/: models
