[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "merlin-cv-mcp"
version = "0.1.0"
description = "Servidor MCP para manipulação local de imagens via OpenCV, integrado ao nanobot."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp[cli]>=1.12.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "starlette>=0.45.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
merlin-cv = "opencv_mcp_server.main:main"
merlin-cv-mcp = "opencv_mcp_server.main:main"

[tool.hatch.build.targets.wheel]
packages = ["opencv_mcp_server"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
